# jupyter-notebook-template

./: .envrc  .gitignore  LICENSE  README.md  flake.nix  justfile  pyproject.toml
src/: example.ipynb
