[project]
name = "jupyter-notebook-env"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = []

[dependency-groups]
dev = ["jupyter>=1.1.1", "matplotlib>=3.10.8", "numpy>=2.4.1", "pandas>=2.3.3"]

###
# type-checker configuration
###
[tool.basedpyright]
pythonVersion = "3.13"
typeCheckingMode = "strict"
failOnWarnings = true
reportAny = "warning"
reportUnknownMemberType = "information"
reportUnknownArgumentType = "information"
reportUnknownVariableType = "warning"
reportUnknownParameterType = "warning"
reportMissingParameterType = "warning"
reportMissingTypeStubs = "information"
reportInvalidCast = "warning"
reportUnnecessaryCast = "warning"
reportUnnecessaryTypeIgnoreComment = "warning"

exclude = [
    "**/.venv",
    "**/venv",
    "**/__pycache__",
    "**/exo_scripts",
    "**/.direnv",
    "**/rust",
]
# stubPath = "typings"

[[tool.basedpyright.executionEnvironments]]
root = "src"

[[tool.basedpyright.executionEnvironments]]
root = "."

###
# ruff configuration
###
[tool.ruff.lint]
extend-select = ["I", "N", "B", "A", "PIE", "SIM"]
